-
Bug
-
Resolution: Fixed
-
P1: Critical
-
Qt Creator 17.0.0
-
None
-
-
62dc1e8b7 (17.0)
Application was already running on the Simulator. First nothing happened, after going to "Home" on Simulator, QtC crashed.
Thread 0 Crashed:: Dispatch queue: com.apple.main-thread 0 libIos.dylib 0x1472ac4f0 Ios::IosToolHandler::exitCode() const + 20 (iostoolhandler.cpp:966) 1 libIos.dylib 0x1472bdc28 Ios::IosToolTaskAdapter::start()::$_0::operator()() const + 40 (iostoolhandler.cpp:1007) 2 libIos.dylib 0x1472bdbf4 QtPrivate::FunctorCall<std::__1::integer_sequence<unsigned long>, QtPrivate::List<>, void, Ios::IosToolTaskAdapter::start()::$_0>::call(Ios::IosToolTaskAdapter::start()::$_0&, void**)::'lambda'()::operator()() const + 28 (qobjectdefs_impl.h:116) 3 libIos.dylib 0x1472bdbcc void QtPrivate::FunctorCallBase::call_internal<void, QtPrivate::FunctorCall<std::__1::integer_sequence<unsigned long>, QtPrivate::List<>, void, Ios::IosToolTaskAdapter::start()::$_0>::call(Ios::IosToolTaskAdapter::start()::$_0&, void**)::'lambda'()>(void**, QtPrivate::FunctorCall<std::__1::integer_sequence<unsigned long>, QtPrivate::List<>, void, Ios::IosToolTaskAdapter::start()::$_0>::call(Ios::IosToolTaskAdapter::start()::$_0&, void**)::'lambda'()&&) + 28 (qobjectdefs_impl.h:65) 4 libIos.dylib 0x1472bdba4 QtPrivate::FunctorCall<std::__1::integer_sequence<unsigned long>, QtPrivate::List<>, void, Ios::IosToolTaskAdapter::start()::$_0>::call(Ios::IosToolTaskAdapter::start()::$_0&, void**) + 40 (qobjectdefs_impl.h:115) 5 libIos.dylib 0x1472bdb30 void QtPrivate::FunctorCallable<Ios::IosToolTaskAdapter::start()::$_0>::call<QtPrivate::List<>, void>(Ios::IosToolTaskAdapter::start()::$_0&, void*, void**) + 36 (qobjectdefs_impl.h:337) 6 libIos.dylib 0x1472bdab8 QtPrivate::QCallableObject<Ios::IosToolTaskAdapter::start()::$_0, QtPrivate::List<>, void>::impl(int, QtPrivate::QSlotObjectBase*, QObject*, void**, bool*) + 168 (qobjectdefs_impl.h:547) 7 QtCore 0x1064aa1b4 0x1063c0000 + 958900 8 libIos.dylib 0x147117cd4 Ios::IosToolHandler::finished() + 40 (moc_iostoolhandler.cpp:323) 9 libIos.dylib 0x1472b9694 Ios::Internal::IosSimulatorToolHandlerPrivate::launchAppOnSimulator(QList<QString> const&)::$_0::operator()(tl::expected<Ios::Internal::SimulatorControl::ResponseData, QString> const&) const + 632 (iostoolhandler.cpp:914) 10 libIos.dylib 0x1472b93c0 QFuture<tl::expected<Ios::Internal::SimulatorControl::ResponseData, QString>> const& Utils::onResultReady<tl::expected<Ios::Internal::SimulatorControl::ResponseData, QString>, Ios::Internal::IosSimulatorToolHandlerPrivate::launchAppOnSimulator(QList<QString> const&)::$_0>(QFuture<tl::expected<Ios::Internal::SimulatorControl::ResponseData, QString>> const&, QObject*, Ios::Internal::IosSimulatorToolHandlerPrivate::launchAppOnSimulator(QList<QString> const&)::$_0)::'lambda'(int)::operator()(int) const + 76 (async.h:79) 11 libIos.dylib 0x1472b9368 QtPrivate::FunctorCall<std::__1::integer_sequence<unsigned long, 0ul>, QtPrivate::List<int>, void, QFuture<tl::expected<Ios::Internal::SimulatorControl::ResponseData, QString>> const& Utils::onResultReady<tl::expected<Ios::Internal::SimulatorControl::ResponseData, QString>, Ios::Internal::IosSimulatorToolHandlerPrivate::launchAppOnSimulator(QList<QString> const&)::$_0>(QFuture<tl::expected<Ios::Internal::SimulatorControl::ResponseData, QString>> const&, QObject*, Ios::Internal::IosSimulatorToolHandlerPrivate::launchAppOnSimulator(QList<QString> const&)::$_0)::'lambda'(int)>::call(QFuture<tl::expected<Ios::Internal::SimulatorControl::ResponseData, QString>> const& Utils::onResultReady<tl::expected<Ios::Internal::SimulatorControl::ResponseData, QString>, Ios::Internal::IosSimulatorToolHandlerPrivate::launchAppOnSimulator(QList<QString> const&)::$_0>(QFuture<tl::expected<Ios::Internal::SimulatorControl::ResponseData, QString>> const&, QObject*, Ios::Internal::IosSimulatorToolHandlerPrivate::launchAppOnSimulator(QList<QString> const&)::$_0)::'lambda'(int)&, void**)::'lambda'()::operator()() const + 44 (qobjectdefs_impl.h:116) 12 libIos.dylib 0x1472b9330 void QtPrivate::FunctorCallBase::call_internal<void, QtPrivate::FunctorCall<std::__1::integer_sequence<unsigned long, 0ul>, QtPrivate::List<int>, void, QFuture<tl::expected<Ios::Internal::SimulatorControl::ResponseData, QString>> const& Utils::onResultReady<tl::expected<Ios::Internal::SimulatorControl::ResponseData, QString>, Ios::Internal::IosSimulatorToolHandlerPrivate::launchAppOnSimulator(QList<QString> const&)::$_0>(QFuture<tl::expected<Ios::Internal::SimulatorControl::ResponseData, QString>> const&, QObject*, Ios::Internal::IosSimulatorToolHandlerPrivate::launchAppOnSimulator(QList<QString> const&)::$_0)::'lambda'(int)>::call(QFuture<tl::expected<Ios::Internal::SimulatorControl::ResponseData, QString>> const& Utils::onResultReady<tl::expected<Ios::Internal::SimulatorControl::ResponseData, QString>, Ios::Internal::IosSimulatorToolHandlerPrivate::launchAppOnSimulator(QList<QString> const&)::$_0>(QFuture<tl::expected<Ios::Internal::SimulatorControl::ResponseData, QString>> const&, QObject*, Ios::Internal::IosSimulatorToolHandlerPrivate::launchAppOnSimulator(QList<QString> const&)::$_0)::'lambda'(int)&, void**)::'lambda'()>(void**, Ios::Internal::IosSimulatorToolHandlerPrivate::launchAppOnSimulator(QList<QString> const&)::$_0&&) + 28 (qobjectdefs_impl.h:65) 13 libIos.dylib 0x1472b9308 QtPrivate::FunctorCall<std::__1::integer_sequence<unsigned long, 0ul>, QtPrivate::List<int>, void, QFuture<tl::expected<Ios::Internal::SimulatorControl::ResponseData, QString>> const& Utils::onResultReady<tl::expected<Ios::Internal::SimulatorControl::ResponseData, QString>, Ios::Internal::IosSimulatorToolHandlerPrivate::launchAppOnSimulator(QList<QString> const&)::$_0>(QFuture<tl::expected<Ios::Internal::SimulatorControl::ResponseData, QString>> const&, QObject*, Ios::Internal::IosSimulatorToolHandlerPrivate::launchAppOnSimulator(QList<QString> const&)::$_0)::'lambda'(int)>::call(QFuture<tl::expected<Ios::Internal::SimulatorControl::ResponseData, QString>> const& Utils::onResultReady<tl::expected<Ios::Internal::SimulatorControl::ResponseData, QString>, Ios::Internal::IosSimulatorToolHandlerPrivate::launchAppOnSimulator(QList<QString> const&)::$_0>(QFuture<tl::expected<Ios::Internal::SimulatorControl::ResponseData, QString>> const&, QObject*, Ios::Internal::IosSimulatorToolHandlerPrivate::launchAppOnSimulator(QList<QString> const&)::$_0)::'lambda'(int)&, void**) + 48 (qobjectdefs_impl.h:115) 14 libIos.dylib 0x1472b9254 void QtPrivate::FunctorCallable<QFuture<tl::expected<Ios::Internal::SimulatorControl::ResponseData, QString>> const& Utils::onResultReady<tl::expected<Ios::Internal::SimulatorControl::ResponseData, QString>, Ios::Internal::IosSimulatorToolHandlerPrivate::launchAppOnSimulator(QList<QString> const&)::$_0>(QFuture<tl::expected<Ios::Internal::SimulatorControl::ResponseData, QString>> const&, QObject*, Ios::Internal::IosSimulatorToolHandlerPrivate::launchAppOnSimulator(QList<QString> const&)::$_0)::'lambda'(int), int>::call<QtPrivate::List<int>, void>(QFuture<tl::expected<Ios::Internal::SimulatorControl::ResponseData, QString>> const& Utils::onResultReady<tl::expected<Ios::Internal::SimulatorControl::ResponseData, QString>, Ios::Internal::IosSimulatorToolHandlerPrivate::launchAppOnSimulator(QList<QString> const&)::$_0>(QFuture<tl::expected<Ios::Internal::SimulatorControl::ResponseData, QString>> const&, QObject*, Ios::Internal::IosSimulatorToolHandlerPrivate::launchAppOnSimulator(QList<QString> const&)::$_0)::'lambda'(int)&, void*, void**) + 36 (qobjectdefs_impl.h:337) 15 libIos.dylib 0x1472b91a8 QtPrivate::QCallableObject<QFuture<tl::expected<Ios::Internal::SimulatorControl::ResponseData, QString>> const& Utils::onResultReady<tl::expected<Ios::Internal::SimulatorControl::ResponseData, QString>, Ios::Internal::IosSimulatorToolHandlerPrivate::launchAppOnSimulator(QList<QString> const&)::$_0>(QFuture<tl::expected<Ios::Internal::SimulatorControl::ResponseData, QString>> const&, QObject*, Ios::Internal::IosSimulatorToolHandlerPrivate::launchAppOnSimulator(QList<QString> const&)::$_0)::'lambda'(int), QtPrivate::List<int>, void>::impl(int, QtPrivate::QSlotObjectBase*, QObject*, void**, bool*) + 168 (qobjectdefs_impl.h:547) 16 QtCore 0x1064aa1b4 0x1063c0000 + 958900 17 QtCore 0x1065f8984 0x1063c0000 + 2328964 18 QtCore 0x1065f8644 QFutureWatcherBase::event(QEvent*) + 28 19 QtWidgets 0x105c67c74 QApplicationPrivate::notify_helper(QObject*, QEvent*) + 332 20 QtWidgets 0x105c68c4c QApplication::notify(QObject*, QEvent*) + 516 21 QtCore 0x106458fb8 QCoreApplication::sendEvent(QObject*, QEvent*) + 172 22 QtCore 0x106459838 QCoreApplicationPrivate::sendPostedEvents(QObject*, int, QThreadData*) + 524 23 libqcocoa.dylib 0x10696c544 0x106954000 + 99652 24 libqcocoa.dylib 0x10696d7e4 0x106954000 + 104420 25 CoreFoundation 0x198da5cd4 __CFRUNLOOP_IS_CALLING_OUT_TO_A_SOURCE0_PERFORM_FUNCTION__ + 28 26 CoreFoundation 0x198da5c68 __CFRunLoopDoSource0 + 172 27 CoreFoundation 0x198da59d4 __CFRunLoopDoSources0 + 232 28 CoreFoundation 0x198da4628 __CFRunLoopRun + 840 29 CoreFoundation 0x198da3c58 CFRunLoopRunSpecific + 572 30 HIToolbox 0x1a483827c RunCurrentEventLoopInMode + 324 31 HIToolbox 0x1a483b4e8 ReceiveNextEventCommon + 676 32 HIToolbox 0x1a49c6484 _BlockUntilNextEventMatchingListInModeWithFilter + 76 33 AppKit 0x19cccbab4 _DPSNextEvent + 684 34 AppKit 0x19d66a5b0 -[NSApplication(NSEventRouting) _nextEventMatchingEventMask:untilDate:inMode:dequeue:] + 688 35 AppKit 0x19ccbec64 -[NSApplication run] + 480 36 libqcocoa.dylib 0x10696b068 0x106954000 + 94312 37 QtCore 0x10646267c QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) + 588 38 QtCore 0x106458cc8 QCoreApplication::exec() + 228 39 Qt Creator 0x10489f0f8 main + 18764 (main.cpp:1021) 40 dyld 0x19891ab98 start + 6076
For Gerrit Dashboard: QTCREATORBUG-33189 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
659053,3 | iOS: Fix crash when starting app on Simulator fails | 17.0 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |