iOS: Fix crash when starting app on Simulator fails

`stop` already emits the finished signal, so we may not do that again. If
we do, the finished handler in IosToolTaskAdapter already released the
m_iosToolHandler handle and crashes.

Remove the additional signal emit and add a guard in the finished
handler.

Fixes: QTCREATORBUG-33189
Change-Id: Ie0d57b12f400392e70cd50006cd9d0dadb9f9d4e
Reviewed-by: Jarek Kobus <jaroslaw.kobus@qt.io>